syntax = "proto3";

option go_package = "github.com/adammck/ranger/pkg/proto";

import "ranje.proto";

package ranger;

message ForceRequest {
  Ident range = 1;

  // The ident of the node to assign the range to.
  // TODO: Also allow nodes to identified by other features.
  // TODO: Does this need its own message type?
  string node = 2;
}

message ForceResponse {
}

message SplitRequest {
  Ident range = 1;

  // The point at which to split the two ranges. This becomes the end key of the
  // left range, and the start key of the right range.
  bytes boundary = 2;

  // The ident of the node to assign the two parts to. Can be the same as the
  // node which the range is currently on.
  string node_left = 3;
  string node_right = 4;
}

message SplitResponse {
}

message JoinRequest {
  Ident range_left = 1;
  Ident range_right = 2;

  // The ident of the node to assign the resulting range to.
  string node = 3;
}

message JoinResponse {
}

service Balancer {

  // Tell the balancer to assign a range to a specific node ASAP.
  rpc Force (ForceRequest) returns (ForceResponse) {}

  // Split a range in two.
  rpc Split (SplitRequest) returns (SplitResponse) {}

  // Join two ranges into one.
  rpc Join (JoinRequest) returns (JoinResponse) {}
}
